--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        Oque é JavaScript
+                     <p><   Oque é JavaScript? </p>
                     </div>
-                    <div class="cartao__conteudo__resposta">O javaScript é uma linguagem de programação
+                    <div class="cartao__conteudo__resposta"><p></p>O java script é uma linguagem de programação</p>
+
+                    </div>
+                    </o>
                     </div>
                 </div>
             </article>
@@ -25,9 +28,9 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        Oque é CSS?
+                       <p></p> Oque é CSS?</p>
                     </div>
-                    <div class="cartao__conteudo__resposta">O CSS é uma linguagem de estilização
+                    <div class="cartao__conteudo__resposta"><p></p>O CSS é uma linguagem de estilização</p>
                     </div>
                 </div>
             </article>  
