--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
                     </div>
                 </div>
             </article>  
+             <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                       <p></p> Oque é CSS?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta"><p></p>O CSS é uma linguagem de estilização</p>
+                    </div>
+                </div>
+            </article>  
         </section>
     </main>
     <footer>
